--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,6 +25,10 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
+    if (project.android.hasProperty('namespace')) {
+        namespace 'com.sayegh.move_to_background'
+    }
+    
     compileSdkVersion 28
 
     defaultConfig {
